--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "antd": "^5.15.0",
     "next": "15.3.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.0.1"
